Changed divider to border

--- a/src/output.css
+++ b/src/output.css
@@ -687,6 +687,19 @@ details[open].faq > summary > span > img.closed-img {
   border-radius: 0.5rem;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-pink {
+  --tw-border-opacity: 1;
+  border-color: hsl(275 100% 97% / var(--tw-border-opacity));
+}
+
 .bg-pink {
   --tw-bg-opacity: 1;
   background-color: hsl(275 100% 97% / var(--tw-bg-opacity));
@@ -838,6 +851,10 @@ details[open].faq > summary > span > img.closed-img {
   src: url(../assets/fonts/static/WorkSans-Bold.ttf);
 
   font-weight: 700;
+}
+
+.last\:border-transparent:last-child {
+  border-color: transparent;
 }
 
 .focus-within\:translate-y-0:focus-within {
